force-app/main/default/objects/DM_Farm__c/DM_Farm__c.object-meta.xml
<CustomObject>
    <label>Farm</label>
    <nameField>
        <label>Farm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Farms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>