force-app/main/default/objects/DM_Farm__c/fields/DM_Farm_Manager__c.field-meta.xml
<CustomField>
    <fullName>DM_Farm_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Farm Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.DM_Farm_Owner__c</field>
            <operation>equals</operation>
            <valueField>Contact.Account.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Farms</relationshipLabel>
    <relationshipName>Farms</relationshipName>
    <type>Lookup</type>
</CustomField>