force-app/main/default/objects/DM_Farm__c/fields/DM_Farm_Number__c.field-meta.xml
<CustomField>
    <fullName>DM_Farm_Number__c</fullName>
    <displayFormat>F-{0000}</displayFormat>
    <label>Farm Number</label>
    <type>AutoNumber</type>
</CustomField>