force-app/main/default/objects/DM_Farm__c/fields/DM_Farm_Owner__c.field-meta.xml
<CustomField>
    <fullName>DM_Farm_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Farm Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Farm Owner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Farms</relationshipLabel>
    <relationshipName>Farms</relationshipName>
    <type>Lookup</type>
</CustomField>