force-app/main/default/objects/DM_Farm__c/recordTypes/DM_Farm.recordType-meta.xml
<RecordType>
    <fullName>DM_Farm</fullName>
    <active>true</active>
    <description>Default record type for a Farm record.</description>
    <label>Farm</label>
</RecordType>