force-app/main/default/objects/DM_Farm__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DM_Farm_Manager__c</columns>
    <columns>DM_Farm_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>